Add post attachment metadata APIs
